--- a/failing-esm-example/index.html
+++ b/failing-esm-example/index.html
@@ -12,7 +12,7 @@
         import { fromLonLat } from 'https://esm.sh/ol@8.1.0/proj';
         import Projection from 'https://esm.sh/ol@8.1.0/proj/Projection'
         import { register } from 'https://esm.sh/ol@8.1.0/proj/proj4'
-        import proj4 from 'https://esm.sh/proj4@2.9.2"';
+        import proj4 from 'https://esm.sh/proj4@2.9.2';
 
         let rdId = "EPSG:28992"
         proj4.defs(rdId, '+proj=sterea +lat_0=52.15616055555555 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +towgs84=565.417,50.3319,465.552,-0.398957,0.343988,-1.8774,4.0725 +units=m +no_defs');
